<?xml version="1.0"?>
<package format="2">
  <name>def_cam_teledyne_nano</name>

  <version>2.0.1</version>
  <description>The Dathomir teledyne package</description>

  <maintainer email="ronaldo.evangelista@fieb.org.br">Ronaldo Evangelista</maintainer>
  
  <license>TODO</license>
  
  <url type="website">https://github.com/Brazilian-Institute-of-Robotics/takodana_gorax_framework/wiki</url>
  <url type="bugtracker">https://github.com/Brazilian-Institute-of-Robotics/takodana_gorax_framework/issues</url>
  <url type="repository">https://github.com/Brazilian-Institute-of-Robotics/takodana_gorax_framework</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
